--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         <section id="main-bio">
             <h2>John Chambers</h2>
             
-            <img src="https://raw.githubusercontent.com/dr3adlokk/Basic-Portfolio/master/assets/images/4linked.jpg">
+            <img src="https://raw.githubusercontent.com/dr3adlokk/Basic-Portfolio/master/assets/images/asciuasg.jpg">
+            <img width="10">
+            <img height="10">
             <p>My name is John Chambers. I am currently a student at the UCI Coding Bootcamp, a rigorous program that has had me at times question who I am. Anywyas, It is a pretty safe assumption that I am relatively tech savy and love the Internet. In addition, I am also a lover of music and animals. I am somewhat of an Ableton Live nerd and I also used to have a blue and gold macaw a.k.a. a parot. When I am not staring at a computer screen I tend to spend a lot of time with my family and friends. 
             </p>
         </section>
