--- a/student biobackup.html
+++ b/student biobackup.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 
     <Link rel="stylesheet" href="./assets/css/student bio.css" type="text/css">
-        <a href="aboutme.html">Portfolio still in beta:</a>
+        <a href="index.html">Portfolio still in beta:</a>
 
 </head>
 <body>
